--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-torch==1.13.1
-torchaudio==0.13.1
-# Keep the rest of your libraries
-transformers
 streamlit
-numpy
-librosa
-soundfile
-pronouncing
 streamlit-webrtc
+transformers
+torch
+torchaudio
+librosa
+matplotlib
+pronouncing
 av
+soundfile
